k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ulchecker-frontend
spec:
  to:
    kind: Service
    name: ulchecker-frontend
  port:
    targetPort: 80
